--- a/index.html
+++ b/index.html
@@ -11,7 +11,42 @@
     <title>DX - DeporteXtremo</title>
   </head>
   <body>
-    <!-- Inicio noticias -->
+    <!-- Inicio Headermenu -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="#">
+    <img src="img/logo.png" width="50"class=" d-inline-block align-center" alt="">
+    <span class="font-weight-bold">DeporteXtremo </span>
+  </a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menú" aria-controls="Menú" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse justify-content-end" id="Menú">
+    <ul class="navbar-nav text-center">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Fútbol <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">NBA</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Tenis</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">Boxéo</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">JJOO</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="#">MotoGP</a>
+      </li>
+     </ul>
+    </div>
+</nav>
+    <!-- Inicio Headermenu -->
+
+
       <main class="container-fluid">
 
         <!-- Notcia N1 -->
@@ -20,9 +55,9 @@
             <img src="img/sorteo-libertadores.jpg" class="img-fluid">
           </div>
            <div class="col-12 col-md-6 col-lg-8">
-          <h3 class="h4 my-3">La tecnología llega a la actual edición de la Libertadores</h3>
-          <p class="small">por Joaquín Angeli</p> 
-          <p>La Conmebol anunció la implementación del sistema VAR (asistencia arbitral por video) desde las semifinales de la actual Libertadores.</p> 
+            <h3 class="h4 my-3">La tecnología llega a la actual edición de la Libertadores</h3>
+            <p class="small">por Joaquín Angeli</p> 
+            <p>La Conmebol anunció la implementación del sistema VAR (asistencia arbitral por video) desde las semifinales de la actual Libertadores.</p> 
           </div>
         </article>
         <!-- Notcia N2 -->
