Haciendo el slider

--- a/index - original.html
+++ b/index - original.html
@@ -18,7 +18,7 @@
     <span class="font-weight-bold">DeporteXtremo </span>
   </a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menú" aria-controls="Menú" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-iconh4"></span>
+    <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse justify-content-end" id="Menú">
@@ -54,15 +54,6 @@
     </div>
     </div>
 </div>
-<nav aria-label="breadcrumb">
-  <ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page"> 
-      <h1 class="text-white bg-dark ">París y Los Ángeles serán las próximas sedes de los Juegos Olímpicos</h1>
-
-      </li>
-
-  </ol>
-</nav>
 
 	<!--Fin slider-->
 
