--- a/practicando_js/ejercicio_1.html
+++ b/practicando_js/ejercicio_1.html
@@ -30,7 +30,30 @@
 		<script>
 			/* 1) Seleccionar el h1 y guardarlo en una variable */
 
+			var titulo = document.querySelector ("h1");
+
 			/* 2) Modificar el texto interno de esta variable */
+
+			// Manipulación de contenido
+
+			//titulo.innerHTML = "un título desde <em>JavaScript</em>"
+
+			//Manipulación de estructura
+
+			//titulo.style.color = "Green";
+			//titulo.style.backgroundColor = "red";
+
+			// manipulación de comportamiento.
+
+			titulo.onclick = manipular;
+
+			function manipular (){
+				titulo.innerHTML = "un título desde <em>JavaScript</em>"
+				titulo.style.color = "Green";
+				titulo.style.backgroundColor = "red";
+
+
+			}
 
 			/* 3) Una vez que funcione, probar poniendo el <script> en el <head> para corroborar que JavaScript se ejecuta secuencialmente! */
 		</script>
