terminando practicas JS, 3,4,5 y 6

--- a/practicando_js/ejercicio_1.html
+++ b/practicando_js/ejercicio_1.html
@@ -36,12 +36,12 @@
 
 			// Manipulación de contenido
 
-			//titulo.innerHTML = "un título desde <em>JavaScript</em>"
+			titulo.innerHTML = "un título desde <em>JavaScript</em>"
 
 			//Manipulación de estructura
 
-			//titulo.style.color = "Green";
-			//titulo.style.backgroundColor = "red";
+			titulo.style.color = "Green";
+			titulo.style.backgroundColor = "red";
 
 			// manipulación de comportamiento.
 
