--- a/index.html
+++ b/index.html
@@ -77,47 +77,12 @@
             <img src="img/sorteo-libertadores.jpg" class="img-fluid">
           </div>
            <div class="col-12 col-md-6 col-lg-8">
-            <h3 class="h4 my-3">La tecnología llega a la actual edición de la Libertadores</h3>
-            <p class="small">por Joaquín Angeli</p> 
-            <p>La Conmebol anunció la implementación del sistema VAR (asistencia arbitral por video) desde las semifinales de la actual Libertadores.</p> 
+            <h3 class="h4 my-3">{{TITULO}}</h3>
+            <p class="small">por <a href="#">{{AUTOR}}</a></p> 
+            <p>{{DETALLE}}</p> 
           </div>
         </article>
-        <!-- Notcia N2 -->
-         <article class="row py-3 mx-0 border-bottom">
-          <div class="col-12 col-md-6 col-lg-4">
-            <img src="img/tickets-rusia-mundial.jpg" class="img-fluid">
-          </div>
- 
-          <div class="col-12 col-md-6 col-lg-8">
-          <h3 class="h4 my-3">Comenzó la venta de entradas para el Mundial de Rusia 2018</h3>
-          <p class="small">por Laura Smasnatta</p> 
-          <p>Hoy se abrió la venta al público de tickets, a través del sitio oficial de la FIFA. El proceso se dividirá en dos partes y los espectadores deberán solicitar una tarjeta de hincha 'Fan ID'</p> 
-          </div>
-        </article>
-        <!-- Notcia N3 -->
-            <article class="row py-3 mx-0 border-bottom">
-          <div class="col-12 col-md-6 col-lg-4">
-            <img src="img/firpo.jpg" class="img-fluid">
-          </div>
- 
-          <div class="col-12 col-md-6 col-lg-8">
-          <h3 class="h4 my-3">A 94 años del derechazo que convirtió en leyenda a Luis Ángel Firpo</h3>
-          <p class="small">por Diego Di Marco</p> 
-          <p>El 14/9/1923 el boxeador argentino enfrento en Nueva York a Jack Dempsey, uno de los mejores pesos pesados de la historia.</p> 
-          </div>
-        </article>
-        <!-- Notcia N4 -->
-         <article class="row py-3 mx-0 border-bottom">
-          <div class="col-12 col-md-6 col-lg-4">
-            <img src="img/buenos-aires.jpg" class="img-fluid">
-          </div>
- 
-          <div class="col-12 col-md-6 col-lg-8">
-          <h3 class="h4 my-3">Buenos Aires 2018 presentó su innovador proyecto de parques y de ceremonia inaugural ante el COI</h3>
-          <p class="small">por Melina Morales</p> 
-          <p>El Comité Organizador de los Juegos de la Juventud presentó su concepto de parques ante la 131a sesión del Comité Olímpico Internacional (COI) que se realizó en Lima. La ceremonia inaugural se realizará al aire libre.</p> 
-
-                 
+                       
       </main>
     <!-- fin noticias -->
 
