--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
      </ul>
     </div>
 </nav>
-	<!--Inicio Slider-->
-	<span class="border-top"></span>
+  <!--Inicio Slider-->
+  <span class="border-top"></span>
 
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-  	<div class="carousel-inner">
+    <div class="carousel-inner">
     <div class="carousel-item active">
         <img src="img/juegos-olimpicos.jpg" class="d-block w-100" alt="...">
     </div>
@@ -64,7 +64,7 @@
   </ol>
 </nav>
 
-	<!--Fin slider-->
+  <!--Fin slider-->
 
     <!-- Inicio Headermenu -->
 
@@ -74,7 +74,7 @@
         <!-- Notcia N1 -->
         <article class="row py-3 mx-0 border-bottom">
           <div class="col-12 col-md-6 col-lg-4">
-            <img src="img/sorteo-libertadores.jpg" class="img-fluid">
+            <img src="https://via.placeholder.com/480x320" class="img-fluid">
           </div>
            <div class="col-12 col-md-6 col-lg-8">
             <h3 class="h4 my-3">{{TITULO}}</h3>
@@ -91,6 +91,20 @@
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>  
+    <script>
+      const ajax = new XMLHttpRequest();
+      //ajax.open(TIPO, RECURSO);//
+      ajax.open("GET", "noticias.json");
+      ajax.onload = function(){
+        if(ajax.status == 200){
+            alert("Mirá en la consola..")
+            console.log (ajax.response)
+        }
+
+      }; 
+      ajax.send()
+
+    </script>
   </body>
 </html>
